spring-hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: spring-hello-world-app
  name: spring-hello-world-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-hello-world-app
  type: ClusterIP
status:
  loadBalancer: {}
